fixes profile SubNav z-index

--- a/app/toCanon/SubNav.css
+++ b/app/toCanon/SubNav.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   color: white;
   overflow: hidden;
-  z-index: 1;
+  z-index: 2;
 
   &.scroll {
     position: fixed;
